syntax = "proto3";
option go_package = "pb";

import "google/protobuf/timestamp.proto";

message ThreadBlock {
    string id                      = 1;
    string target                  = 2;
    repeated string parents        = 3;
    bytes targetKey                = 4;
    string threadPubKey            = 5;
    google.protobuf.Timestamp date = 7;
}

message SignedThreadBlock {
    string id             = 1;
    bytes data            = 2;
    string threadId       = 3;
    bytes threadSignature = 4;
    string threadName     = 5;
    bytes issuerPubKey    = 6;
    bytes issuerSignature = 7;
}

message ThreadInvite {
    ThreadBlock block = 1;
    Type type         = 2;

    enum Type {
        INTERNAL = 0;
        EXTERNAL = 1;
    }
}

message ThreadJoin {
    ThreadBlock block = 1;
}

message ThreadLeave {
    ThreadBlock block = 1;
}

message ThreadData {
    ThreadBlock block = 1;
}

message ThreadAnnotation {
    ThreadBlock block = 1;
}
